--- a/public/index.html
+++ b/public/index.html
@@ -7,16 +7,21 @@
   <link rel="stylesheet" href="https://unpkg.com/suneditor/dist/css/suneditor.min.css">
   <style>
     body{max-width:900px;margin:2rem auto;font-family:system-ui,Arial,sans-serif}
-    header{display:flex;gap:1rem;align-items:center;justify-content:space-between}
+    header{display:flex;gap:1rem;align-items:center;justify-content:space-between;flex-wrap:wrap}
     .actions{display:flex;gap:1rem;align-items:center}
+    .muted{opacity:.7;font-size:.9rem}
   </style>
 </head>
 <body>
   <header>
-    <h1>Редактор книги</h1>
+    <div>
+      <h1>Редактор книги</h1>
+      <div class="muted">Project ID: <span id="pid"></span></div>
+      <div class="muted">Проверка рендера в R2 (после “Сохранить”): <a id="testLink" href="#" target="_blank">/test/render_to_r2?merchantId=...</a></div>
+      <div class="muted">Быстрый тест без всего: <a href="/test/pdf" target="_blank">/test/pdf</a></div>
+    </div>
     <div class="actions">
       <button id="saveDraft">Сохранить черновик</button>
-      <!-- Async Peecho Button: БЕЗ data-src/publication -->
       <a id="peechoBtn" class="peecho-print-button"
          href="https://www.peecho.com/"
          title="Печать книги"
@@ -32,11 +37,10 @@
 
   <div id="editor" style="margin-top:1rem;"></div>
 
-  <!-- SunEditor -->
   <script src="https://unpkg.com/suneditor/dist/suneditor.min.js"></script>
   <script src="https://unpkg.com/suneditor/src/lang/ru.js"></script>
 
-  <!-- ВСТАВЬ свой персональный JS скрипт кнопки Peecho из кабинета -->
+  <!-- ВСТАВЬ свой персональный JS кнопки Peecho -->
   <script>
     (function(){
       var s=document.createElement("script"); s.async=true;
@@ -46,7 +50,6 @@
   </script>
 
   <script>
-    // 1) Инициализация SunEditor (MIT)
     const editor = SUNEDITOR.create('editor', {
       lang: SUNEDITOR_LANG['ru'],
       height: '70vh',
@@ -56,20 +59,22 @@
       ]
     });
 
-    // 2) projectId для связи с заказом (merchantReference)
     const key = 'book_project_id';
     let projectId = localStorage.getItem(key);
     if (!projectId) {
       projectId = 'PROJECT_' + Math.random().toString(36).slice(2,10);
       localStorage.setItem(key, projectId);
     }
-    // прокинем в кнопку
+
+    document.getElementById('pid').textContent = projectId;
+    const testLink = document.getElementById('testLink');
+    testLink.href = '/test/render_to_r2?merchantId=' + encodeURIComponent(projectId);
+
     const btn = document.getElementById('peechoBtn');
     btn.setAttribute('data-reference', projectId);
 
-    // 3) Сохранение черновика в KV через Pages Function
     document.getElementById('saveDraft').onclick = async () => {
-      const html = editor.getContents(); // готовый HTML
+      const html = editor.getContents();
       const res = await fetch('/api/draft', {
         method: 'POST',
         headers: {'Content-Type':'application/json'},
