--- a/public/index.html
+++ b/public/index.html
@@ -107,7 +107,7 @@
     const DONATE_KOFI      = "https://ko-fi.com/yourname";    // 👈 ЗАМЕНИ или оставь пустым ""
 
     // 2) (опц.) Встроенная кнопка PayPal Smart Buttons — заполни CLIENT ID
-    const PAYPAL_CLIENT_ID = ""; // 👈 если оставишь пустым — встроенная кнопка не покажется
+    const PAYPAL_CLIENT_ID = "AQ7eziOmsfbsBKBLunUh_nPcoFn5Y2NsJGsR4xY50g-NvstA4_B7P46IJTItbb9TvFkxxOagFgFG-HXB"; // 👈 если оставишь пустым — встроенная кнопка не покажется
 
     // ===== РЕДАКТОР =====
     const editor = SUNEDITOR.create('editor', {
