--- a/public/index.html
+++ b/public/index.html
@@ -100,98 +100,55 @@
     </div>
   </div>
 
-  <script>
-    // ===== НАСТРОЙКИ ДОНАТА =====
-    // 1) Простой вариант: подставь свои ссылки (необязательно обе).
-    const DONATE_PAYPAL_ME = "https://paypal.me/yourname";   // 👈 ЗАМЕНИ или оставь пустым ""
-    const DONATE_KOFI      = "https://ko-fi.com/yourname";    // 👈 ЗАМЕНИ или оставь пустым ""
+<script>
+  // 🔧 УКАЖИ СВОЙ LIVE CLIENT ID
+  const PAYPAL_CLIENT_ID = "YOUR_LIVE_CLIENT_ID";
 
-    // 2) (опц.) Встроенная кнопка PayPal Smart Buttons — заполни CLIENT ID
-    const PAYPAL_CLIENT_ID = "AQ7eziOmsfbsBKBLunUh_nPcoFn5Y2NsJGsR4xY50g-NvstA4_B7P46IJTItbb9TvFkxxOagFgFG-HXB"; // 👈 если оставишь пустым — встроенная кнопка не покажется
+  function mountPayPalButtons() {
+    // Подключаем SDK с запросом на карточный источник
+    const sdk = document.createElement('script');
+    sdk.src =
+      "https://www.paypal.com/sdk/js" +
+      "?client-id=" + encodeURIComponent(PAYPAL_CLIENT_ID) +
+      "&currency=EUR" +
+      "&intent=capture" +
+      "&enable-funding=card" +        // просим показать кнопку карт
+      "&components=buttons" +
+      "&commit=true";
+    sdk.onload = () => {
+      const container = document.getElementById('paypal-button-container');
+      container.innerHTML = ""; // очистим перед рендером
 
-    // ===== РЕДАКТОР =====
-    const editor = SUNEDITOR.create('editor', {
-      lang: SUNEDITOR_LANG['ru'],
-      height: '70vh',
-      buttonList: [
-        ['undo','redo','formatBlock','bold','italic','underline','removeFormat'],
-        ['fontColor','hiliteColor','align','list','link','image']
-      ]
-    });
+      // Вспомогалка: отрисовать кнопку, если разрешено
+      const renderBtn = (fundingSource, style) => {
+        const btn = paypal.Buttons({
+          fundingSource,
+          style: Object.assign({ layout: 'horizontal', label: 'donate', tagline: false }, style),
+          createOrder: (data, actions) => actions.order.create({
+            purchase_units: [{ amount: { value: '2.00', currency_code: 'EUR' } }] // измени сумму по желанию
+          }),
+          onApprove: (data, actions) => actions.order.capture().then(() => {
+            // тут можешь показать «спасибо»
+            const close = document.getElementById('donateClose');
+            if (close) close.textContent = 'Спасибо! Закрыть';
+          })
+        });
+        if (btn.isEligible()) btn.render('#paypal-button-container');
+      };
 
-    // Project ID для Peecho reference и (если нужно) связей
-    const key = 'book_project_id';
-    let projectId = localStorage.getItem(key);
-    if (!projectId) {
-      projectId = 'PROJECT_' + Math.random().toString(36).slice(2,10);
-      localStorage.setItem(key, projectId);
-    }
-    document.getElementById('pid').textContent = projectId;
-    document.getElementById('peechoBtn').setAttribute('data-reference', projectId);
+      // 1) Сначала карта (если доступно)
+      renderBtn(paypal.FUNDING.CARD, { color: 'black' });
 
-    // Сохранение черновика (на будущее, если нужно)
-    document.getElementById('saveDraft').onclick = async () => {
-      const html = editor.getContents();
-      const res = await fetch('/api/draft', {
-        method: 'POST',
-        headers: {'Content-Type':'application/json'},
-        body: JSON.stringify({ merchantReference: projectId, html })
-      });
-      alert(res.ok ? 'Черновик сохранён' : 'Ошибка сохранения');
+      // 2) Затем обычный PayPal
+      renderBtn(paypal.FUNDING.PAYPAL, { color: 'gold' });
     };
+    document.body.appendChild(sdk);
+  }
 
-    // ===== МОДАЛКА ДОНАТА (только донат) =====
-    const modal = document.getElementById('donateModal');
-    const btnOpen = document.getElementById('openDonate');
-    const btnClose = document.getElementById('donateClose');
-    const link1 = document.getElementById('donateLink1');
-    const link2 = document.getElementById('donateLink2');
-    const paypalBox = document.getElementById('paypalBox');
+  // вызывем mountPayPalButtons при открытии твоей донат-модалки
+  // если у тебя уже есть openDonateModal(), просто добавь туда:
+  //   if (PAYPAL_CLIENT_ID) { document.getElementById('paypalBox').classList.remove('hidden'); mountPayPalButtons(); }
+</script>
 
-    // Подставим ссылки (скроем, если пустые)
-    if (DONATE_PAYPAL_ME) { link1.href = DONATE_PAYPAL_ME; } else { link1.parentElement.removeChild(link1); }
-    if (DONATE_KOFI)      { link2.href = DONATE_KOFI; } else { link2.parentElement.removeChild(link2); }
-
-    function openDonateModal() {
-      modal.style.display = 'flex';
-      // Подгружаем PayPal SDK и показываем встроенную кнопку только если указан CLIENT_ID
-      if (PAYPAL_CLIENT_ID && paypalBox.classList.contains('hidden')) {
-        paypalBox.classList.remove('hidden');
-        const s = document.createElement('script');
-        s.src = `https://www.paypal.com/sdk/js?client-id=${encodeURIComponent(PAYPAL_CLIENT_ID)}&currency=EUR&intent=capture`;
-        s.onload = () => {
-          if (window.paypal && document.getElementById('paypal-button-container')) {
-            paypal.Buttons({
-              style: { layout: 'horizontal', label: 'donate' },
-              createOrder: (data, actions) => {
-                // Минимальный донат — 2 EUR (изменишь при желании)
-                return actions.order.create({
-                  purchase_units: [{ amount: { value: '2.00', currency_code: 'EUR' } }]
-                });
-              },
-              onApprove: (data, actions) => actions.order.capture().then(() => {
-                btnClose.textContent = 'Спасибо! Закрыть';
-              })
-            }).render('#paypal-button-container');
-          }
-        };
-        document.body.appendChild(s);
-      }
-    }
-    function closeDonateModal(){ modal.style.display = 'none'; }
-
-    btnOpen.addEventListener('click', e => { e.preventDefault(); openDonateModal(); });
-    btnClose.addEventListener('click', () => closeDonateModal());
-
-    // Показ модалки при копировании/попытке печати — только информируем (ничего не блокируем окончательно)
-    document.addEventListener('copy', () => { if (modal.style.display !== 'flex') openDonateModal(); });
-    document.addEventListener('keydown', (e) => {
-      const isPrint = (e.ctrlKey || e.metaKey) && e.key.toLowerCase() === 'p';
-      if (isPrint) {
-        e.preventDefault(); // не печатаем «сырой» редактор
-        openDonateModal();  // предлагаем поддержать; дальше пользователь может закрыть и распечатать PDF, если реализуешь скачивание
-      }
-    });
-  </script>
 </body>
 </html>
