--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
     .btn{display:inline-block;padding:.6rem 1rem;border:1px solid #ccc;border-radius:.5rem;text-decoration:none;cursor:pointer}
     .btn-primary{background:#111;color:#fff;border-color:#111}
     .btn-ghost{background:#fff;color:#111}
+    .hidden{display:none}
     /* modal */
     .modal-backdrop{position:fixed;inset:0;background:rgba(0,0,0,.45);display:none;align-items:center;justify-content:center;z-index:9999}
     .modal{background:#fff;max-width:560px;width:calc(100% - 2rem);border-radius:.75rem;padding:1.25rem;box-shadow:0 10px 30px rgba(0,0,0,.2)}
@@ -22,7 +23,6 @@
     .row a,.row button{flex:1}
     .donate-options{display:grid;grid-template-columns:1fr;gap:.5rem;margin:.5rem 0 1rem}
     .donate-box{border:1px solid #eee;border-radius:.5rem;padding:.75rem}
-    .hidden{display:none}
   </style>
 </head>
 <body>
@@ -35,10 +35,10 @@
     <div class="actions">
       <button id="saveDraft" class="btn btn-ghost">Сохранить черновик</button>
 
-      <!-- Кнопка: открыть ТОЛЬКО модалку доната -->
+      <!-- открыть ТОЛЬКО модалку доната -->
       <a id="openDonate" class="btn" href="#">Поддержать проект</a>
 
-      <!-- Peecho Async (бумажная печать) — оставь как было -->
+      <!-- Peecho Async (бумажная печать) — БЕЗ data-src -->
       <a id="peechoBtn" class="peecho-print-button btn btn-primary"
          href="https://www.peecho.com/"
          title="Печать книги"
@@ -52,7 +52,7 @@
   </header>
 
   <div class="muted" style="margin:.5rem 0 1rem">
-    Подсказка: при <b>копировании</b> (Ctrl/Cmd+C) или попытке <b>печати</b> (Ctrl/Cmd+P) мы покажем окно «Поддержать проект». Это добровольно.
+    Подсказка: при <b>копировании</b> (Ctrl/Cmd+C) или попытке <b>печати</b> (Ctrl/Cmd+P) покажем окно «Поддержать проект». Это добровольно.
   </div>
 
   <div id="editor" style="margin-top:1rem;"></div>
@@ -61,35 +61,34 @@
   <script src="https://unpkg.com/suneditor/dist/suneditor.min.js"></script>
   <script src="https://unpkg.com/suneditor/src/lang/ru.js"></script>
 
-  <!-- 👇 ВСТАВЬ СВОЙ персональный скрипт Peecho (merchant button script) -->
+  <!-- Peecho merchant script (можешь оставить этот или заменить на свой из кабинета) -->
   <script>
     (function(){
       var s=document.createElement("script"); s.async=true;
-      // ЗАМЕНИ на свой URL из Peecho (пример ниже — заглушка)
       s.src="https://d3aln0nj58oevo.cloudfront.net/button/script/175871453943565676.js";
       document.head.appendChild(s);
     })();
   </script>
 
-  <!-- DONATION MODAL (только донат) -->
+  <!-- DONATION MODAL -->
   <div id="donateModal" class="modal-backdrop" role="dialog" aria-modal="true">
     <div class="modal">
       <h2>Поддержите проект 🙏</h2>
-      <p>Если вам полезен этот редактор и печать книг — можете оставить донат. Если не сейчас — нажмите «Закрыть».</p>
+      <p>Если инструмент полезен — можете оставить донат. Если не сейчас — нажмите «Закрыть».</p>
 
       <div class="donate-options">
-        <!-- Вариант 1: простые ссылки (работает без настройки) -->
+        <!-- Вариант 1: быстрые ссылки -->
         <div class="donate-box">
           <strong>Быстрые способы</strong>
           <div class="row" style="margin-top:.5rem">
-            <a id="donateLink1" class="btn" target="_blank" rel="noopener">PayPal.Me</a>
-            <a id="donateLink2" class="btn" target="_blank" rel="noopener">Ko-fi</a>
+            <a id="donateLink1" class="btn hidden" target="_blank" rel="noopener">PayPal.Me</a>
+            <a id="donateLink2" class="btn hidden" target="_blank" rel="noopener">Ko-fi</a>
           </div>
         </div>
 
-        <!-- Вариант 2: встроенная кнопка PayPal (по желанию) -->
+        <!-- Вариант 2: встроенные PayPal Smart Buttons -->
         <div id="paypalBox" class="donate-box hidden">
-          <strong>Оплата прямо здесь (PayPal)</strong>
+          <strong>Оплата прямо здесь (PayPal / Card)</strong>
           <div id="paypal-button-container" style="margin-top:.5rem"></div>
         </div>
       </div>
@@ -100,55 +99,108 @@
     </div>
   </div>
 
-<script>
-  // 🔧 УКАЖИ СВОЙ LIVE CLIENT ID
-  const PAYPAL_CLIENT_ID = "YOUR_LIVE_CLIENT_ID";
+  <script>
+    // ===== НАСТРОЙКИ (заполни только это) =====
+    const DONATE_PAYPAL_ME = "";             // напр. "https://paypal.me/yourname" или оставь пустым
+    const DONATE_KOFI      = "";             // напр. "https://ko-fi.com/yourname" или оставь пустым
+    const PAYPAL_CLIENT_ID = "AQ7eziOmsfbsBKBLunUh_nPcoFn5Y2NsJGsR4xY50g-NvstA4_B7P46IJTItbb9TvFkxxOagFgFG-HXB";             // LIVE client-id PayPal; если пусто — встроенные кнопки скрыты
+    const DONATE_AMOUNT_EUR = "2.00";        // сумма по умолчанию (можешь изменить)
 
-  function mountPayPalButtons() {
-    // Подключаем SDK с запросом на карточный источник
-    const sdk = document.createElement('script');
-    sdk.src =
-      "https://www.paypal.com/sdk/js" +
-      "?client-id=" + encodeURIComponent(PAYPAL_CLIENT_ID) +
-      "&currency=EUR" +
-      "&intent=capture" +
-      "&enable-funding=card" +        // просим показать кнопку карт
-      "&components=buttons" +
-      "&commit=true";
-    sdk.onload = () => {
-      const container = document.getElementById('paypal-button-container');
-      container.innerHTML = ""; // очистим перед рендером
+    // ===== РЕДАКТОР =====
+    const editor = SUNEDITOR.create('editor', {
+      lang: SUNEDITOR_LANG['ru'],
+      height: '70vh',
+      buttonList: [
+        ['undo','redo','formatBlock','bold','italic','underline','removeFormat'],
+        ['fontColor','hiliteColor','align','list','link','image']
+      ]
+    });
 
-      // Вспомогалка: отрисовать кнопку, если разрешено
-      const renderBtn = (fundingSource, style) => {
-        const btn = paypal.Buttons({
-          fundingSource,
-          style: Object.assign({ layout: 'horizontal', label: 'donate', tagline: false }, style),
-          createOrder: (data, actions) => actions.order.create({
-            purchase_units: [{ amount: { value: '2.00', currency_code: 'EUR' } }] // измени сумму по желанию
-          }),
-          onApprove: (data, actions) => actions.order.capture().then(() => {
-            // тут можешь показать «спасибо»
-            const close = document.getElementById('donateClose');
-            if (close) close.textContent = 'Спасибо! Закрыть';
-          })
-        });
-        if (btn.isEligible()) btn.render('#paypal-button-container');
-      };
+    // Project ID → и в Peecho reference
+    const key = 'book_project_id';
+    let projectId = localStorage.getItem(key);
+    if (!projectId) {
+      projectId = 'PROJECT_' + Math.random().toString(36).slice(2,10);
+      localStorage.setItem(key, projectId);
+    }
+    document.getElementById('pid').textContent = projectId;
+    document.getElementById('peechoBtn').setAttribute('data-reference', projectId);
 
-      // 1) Сначала карта (если доступно)
-      renderBtn(paypal.FUNDING.CARD, { color: 'black' });
-
-      // 2) Затем обычный PayPal
-      renderBtn(paypal.FUNDING.PAYPAL, { color: 'gold' });
+    // Сохранение черновика в KV
+    document.getElementById('saveDraft').onclick = async () => {
+      const html = editor.getContents();
+      const res = await fetch('/api/draft', {
+        method: 'POST',
+        headers: {'Content-Type':'application/json'},
+        body: JSON.stringify({ merchantReference: projectId, html })
+      });
+      alert(res.ok ? 'Черновик сохранён' : 'Ошибка сохранения');
     };
-    document.body.appendChild(sdk);
-  }
 
-  // вызывем mountPayPalButtons при открытии твоей донат-модалки
-  // если у тебя уже есть openDonateModal(), просто добавь туда:
-  //   if (PAYPAL_CLIENT_ID) { document.getElementById('paypalBox').classList.remove('hidden'); mountPayPalButtons(); }
-</script>
+    // ===== МОДАЛКА ДОНАТА =====
+    const modal = document.getElementById('donateModal');
+    const btnOpen = document.getElementById('openDonate');
+    const btnClose = document.getElementById('donateClose');
+    const link1 = document.getElementById('donateLink1');
+    const link2 = document.getElementById('donateLink2');
+    const paypalBox = document.getElementById('paypalBox');
+    const paypalContainer = document.getElementById('paypal-button-container');
 
+    // Показать ссылки, если заданы
+    if (DONATE_PAYPAL_ME) { link1.href = DONATE_PAYPAL_ME; link1.classList.remove('hidden'); }
+    if (DONATE_KOFI)      { link2.href = DONATE_KOFI;     link2.classList.remove('hidden'); }
+
+    let paypalMounted = false;
+    function mountPayPalButtons() {
+      if (paypalMounted || !PAYPAL_CLIENT_ID) return;
+      paypalMounted = true;
+      paypalBox.classList.remove('hidden');
+
+      const sdk = document.createElement('script');
+      sdk.src = "https://www.paypal.com/sdk/js"
+        + "?client-id=" + encodeURIComponent(PAYPAL_CLIENT_ID)
+        + "&currency=EUR"
+        + "&intent=capture"
+        + "&enable-funding=card"
+        + "&components=buttons"
+        + "&commit=true";
+      sdk.onload = () => {
+        paypalContainer.innerHTML = "";
+        const renderBtn = (fundingSource, style) => {
+          const btn = paypal.Buttons({
+            fundingSource,
+            style: Object.assign({ layout:'horizontal', label:'donate', tagline:false }, style),
+            createOrder: (data, actions) => actions.order.create({
+              purchase_units: [{ amount: { value: DONATE_AMOUNT_EUR, currency_code: 'EUR' } }]
+            }),
+            onApprove: (data, actions) => actions.order.capture().then(() => {
+              btnClose.textContent = 'Спасибо! Закрыть';
+            })
+          });
+          if (btn.isEligible()) btn.render('#paypal-button-container');
+        };
+        // сначала карта (если доступна), затем обычный PayPal
+        renderBtn(paypal.FUNDING.CARD,   { color:'black' });
+        renderBtn(paypal.FUNDING.PAYPAL, { color:'gold'  });
+      };
+      document.body.appendChild(sdk);
+    }
+
+    function openDonateModal() {
+      modal.style.display = 'flex';
+      if (PAYPAL_CLIENT_ID) mountPayPalButtons();
+    }
+    function closeDonateModal(){ modal.style.display = 'none'; }
+
+    btnOpen.addEventListener('click', e => { e.preventDefault(); openDonateModal(); });
+    btnClose.addEventListener('click', () => closeDonateModal());
+
+    // Показывать модалку при копировании/попытке печати
+    document.addEventListener('copy', () => { if (modal.style.display !== 'flex') openDonateModal(); });
+    document.addEventListener('keydown', (e) => {
+      const isPrint = (e.ctrlKey || e.metaKey) && e.key.toLowerCase() === 'p';
+      if (isPrint) { e.preventDefault(); openDonateModal(); }
+    });
+  </script>
 </body>
 </html>
